--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,15 @@ body {
     place-items: center;
     transition: all 1s;
     height: 100vh;
+    background:#fff;	
   }
 img{width:40px;margin-left:20px;}
 
 .container{
   display:flex;
    position: absolute;
-	 font-family: 'Lato', sans-serif;
-	 font-size: 35px;
+   font-family: 'Lato', sans-serif;
+   font-size: 25px;
    line-height: 40px;
 
 }
