--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,14 @@ img{width:40px;margin-left:20px;}
   display:flex;
    position: absolute;
    font-family: 'Lato', sans-serif;
-   font-size: 22px;
+   font-size: 20px;
    line-height: 40px;
 
 }
 
 .text-content, .title-content{
   display:flex;
-  margin:0 10px;
+  margin:0 5px;
   padding:30px 0;
 }
 .text-content{
@@ -180,7 +180,7 @@ img{width:40px;margin-left:20px;}
 }
  
 @media screen and (max-width:515px){
-  .text-content, .title-content{
-	margin: 0 10px;
+  .container{
+	font-size: 18px;
   }
 }
