--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ img{width:35px;margin-left:20px;}
   display:flex;
    position: absolute;
    font-family: 'Lato', sans-serif;
-   font-size: 12px;
+   font-size: 13px;
    line-height: 40px;
 
 }
@@ -32,7 +32,7 @@ img{width:35px;margin-left:20px;}
   padding:30px 0;
 }
 .text-content{
-  color:#fca120;
+  color:#007bff;
 }
 
 .text-content:before {
@@ -45,7 +45,7 @@ img{width:35px;margin-left:20px;}
 }
 
 .text-content:after{
-	 color: #fca120;
+	 color: #007bff;
 	 font-size: 42px;
 	 line-height: 40px;
 	 -webkit-animation-name: opacity;
@@ -57,7 +57,7 @@ img{width:35px;margin-left:20px;}
 }
 
 .text-content:before{
-  color: #fca120;
+  color: #007bff;
 	 font-size: 42px;
 	 line-height: 40px;
 	 -webkit-animation-name: opacity;
@@ -183,6 +183,6 @@ img{width:35px;margin-left:20px;}
  
 @media screen and (max-width:515px){
   .container{
-	font-size: 12px;
+	font-size: 11px;
   }
 }
